# multitaper

./: .Rbuildignore  .gitignore  ChangesNotInPkg.txt  DESCRIPTION  NAMESPACE  README.md  buildNotesInR.txt  configure.ac  thingsToWorkOn.txt  thingsToWorkon.txt
R/: demod.R  dpss.R  dpssHelpers.R  dropFreqs.R  firstlib.R  multitaper.R  multitaperHelper.R  plots.R  plotsHelper.R  sineTaper.R  utility.R
data/: CETdaily.rda  CETmonthly.rda  HadCRUTnh.rda  mlco2.rda  percivalAR4.rda  willamette.rda
inst/: CITATION
inst/doc/: UsingFFTWinMultitaper.Rnw  vignette.bib
man/: CETdaily.Rd  CETmonthly.Rd  HadCRUTnh.Rd  centre.Rd  demod.dpss.Rd  dpss.Rd  dpssToEigenvalues.Rd  dropFreqs.Rd  mlco2.Rd  mtm.coh.Rd  multitaper-package.R  multitaper-package.Rd  multitaper.Rd  multitaperTrend.Rd  percivalAR4.Rd  plot.mtm.Rd  plot.mtm.coh.Rd  sineTaper.Rd  spec.mtm.Rd  willamette.Rd
notIncluded/vignettes/: UsingFFTWinMultitaper.Rnw  vignette.bib
src/: Makevars  Makevars.win  djt.f  dpss.f90  multitaper_init.c  sine.f
